# digital-dso-app

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  alembic.ini  db.sqlite3  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml  release.yml
docs/confluence/: 01_project_overview.md  02_architecture.md  03_tools_and_env.md  04_clean_code_convention.md  05_folder_structure.md  06_poetry_management.md  07_env_configuration.md  08_dev_flow_and_git.md  09_testing_and_coverage.md  10_ci_cd_pipeline.md  11_deployment_guide.md  12_code_review_checklist.md  13_logging_and_monitoring.md  14_performance_profiling.md  15_release_and_summary.md  index.md  lifecycle_documentation.md
docs/daily-log/: 2025-05-25.md  2025-05-26-Ngày-2.md  2025-05-28-Ngày-4.md  2025-05-29.md  2025-05-30.md  2025-06-03-Ngày-7.md  2025-06-04-Ngày-8.md  2025-06-05-Ngày-9.md  2025-06-05.md  2025-06-06-Ngày-10.md  2025-06-07-Ngày-11.md  2025-06-11-Ngày-13.md  2025-06-12-Ngày-14.md  2025-06-13-Ngày-15.md  2025-06-16-Ngày-16.md  2025-06-18-Ngày-18.md  Ngày-03.md  Ngày-10.md  Ngày-12.md  Ngày-13.md  Ngày-14.md  Ngày-17.md  Ngày-19.md  Ngày-20.md  Ngày-21.md  Ngày-22.md  Ngày-23.md  Ngày-24.md  Ngày-25.md  Ngày-26.md  Ngày-27.md  Ngày-28.md  Ngày-29.md  Ngày-30.md
docs/epics/: brd_epic_init_001.md
docs/learning_notes/: learning_note_01_clean_code_testing_logging.md
docs/summary/: coverage_report.md  documents_review_checklist.md  final_reflection_30_days.md  log_samples.md  phase_04_summary.md  (+3 more)
migrations/: env.py
src/: main.py
(+16 files in other folders)
